; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/gyro/extr_bmg160_core.c_bmg160_data_rdy_trig_poll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/gyro/extr_bmg160_core.c_bmg160_data_rdy_trig_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.bmg160_data = type { i64, i32, i64, i32, i64 }

@IRQ_WAKE_THREAD = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @bmg160_data_rdy_trig_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bmg160_data_rdy_trig_poll(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.iio_dev*, align 8
  %7 = alloca %struct.bmg160_data*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.iio_dev*
  store %struct.iio_dev* %9, %struct.iio_dev** %6, align 8
  %10 = load %struct.iio_dev*, %struct.iio_dev** %6, align 8
  %11 = call %struct.bmg160_data* @iio_priv(%struct.iio_dev* %10)
  store %struct.bmg160_data* %11, %struct.bmg160_data** %7, align 8
  %12 = load %struct.bmg160_data*, %struct.bmg160_data** %7, align 8
  %13 = getelementptr inbounds %struct.bmg160_data, %struct.bmg160_data* %12, i32 0, i32 4
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load %struct.bmg160_data*, %struct.bmg160_data** %7, align 8
  %18 = getelementptr inbounds %struct.bmg160_data, %struct.bmg160_data* %17, i32 0, i32 3
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @iio_trigger_poll(i32 %19)
  br label %32

21:                                               ; preds = %2
  %22 = load %struct.bmg160_data*, %struct.bmg160_data** %7, align 8
  %23 = getelementptr inbounds %struct.bmg160_data, %struct.bmg160_data* %22, i32 0, i32 2
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %31

26:                                               ; preds = %21
  %27 = load %struct.bmg160_data*, %struct.bmg160_data** %7, align 8
  %28 = getelementptr inbounds %struct.bmg160_data, %struct.bmg160_data* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @iio_trigger_poll(i32 %29)
  br label %31

31:                                               ; preds = %26, %21
  br label %32

32:                                               ; preds = %31, %16
  %33 = load %struct.bmg160_data*, %struct.bmg160_data** %7, align 8
  %34 = getelementptr inbounds %struct.bmg160_data, %struct.bmg160_data* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %32
  %38 = load i32, i32* @IRQ_WAKE_THREAD, align 4
  store i32 %38, i32* %3, align 4
  br label %41

39:                                               ; preds = %32
  %40 = load i32, i32* @IRQ_HANDLED, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %37
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local %struct.bmg160_data* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @iio_trigger_poll(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
